--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,12 @@ tests/
 **/*.pth
 /assets/*
 **/manopth/*
+
+# IsaacLab
+IsaacLab/
+
+# pointops
+pointops/
+
+# chamfer_distance
+chamfer_distance/
